k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: algebra2
  namespace: algebra2
spec:
  selector:
    app: algebra2
  ports:
    - port: 80
      targetPort: 3000
