k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algebra2
  namespace: algebra2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: algebra2.logycon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algebra2
                port:
                  number: 80
